--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href = "index.html"></a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src="banner.png">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
