--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
-    <img src="banner.png">
+    <img src="/images/banner.png">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
