--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <nav>
         <ul>
             <li>
-                <a href = "index.html"></a>
+                <a href = "index.html">Home</a>
             </li>
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
-    <img src="/images/banner.png">
+    <img src="/assets/images/banner.png">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        
     </main>
 </body>
 </html>
