--- a/menu.html
+++ b/menu.html
@@ -9,15 +9,23 @@
 <body>
     <!-- MENU PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href = "menu.html">Menu</a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <img src="/assets/images/shrimp-skewers.jpg">
     <main>
         <!-- Your job is to make the menu items in each section below a proper table! -->
         Appetizers
-
-        Name Price
+<table>
+       <thead> Name</thead> Price
         Chicken Satay $7.95
         Fresh Rolls $6.95
-        
+    </table>
         Lunch
 
         Name Price
