--- a/about.html
+++ b/about.html
@@ -5,13 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
+    
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="menu.html">Menu</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
     <!-- TODO: Banner Image here-->
+  <div id="banner">  <img src="./assets/images/banner.png" alt="restaurant banner image with restaurant name"></div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Our Locations</h2>
+        <ul>
+            <li>East Rutherford, NJ</li>
+            <li>New York, NY</li>
+            <li>Miami, FL</li>
+            <li>Boston, MA</li>
+        </ul>
+        <h2>Origin Story</h2>
+        <img src="assets/images/about.jpg" alt="Spices">
+        <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, culpa labore, odio quaerat, ullam animi cum enim fuga impedit eos consequatur minima blanditiis necessitatibus corporis ipsum est nesciunt ex quam!
+        </p>
     </main>
+
 </body>
 </html>
