--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
     <!-- TODO: Navbar here -->
     <nav>
         <ul>
-            <li>
-                <a href = "index.html">Home</a>
-            </li>
+            <li><a class="active-page" href = "./index.html">Home</a></li>
+            <li><a href = "./menu.html">Menu</a></li>
+            <li><a href = "./about.html">About</a></li>
+            <li><a href = "./contact.html">Contact  </a></li>
         </ul>
     </nav>
     <!-- TODO: Banner Image here-->
-    <img src="/assets/images/banner.png">
+    <img src="./assets/images/banner.png" alt="restaurant banner image with restaurant name">
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
-        
+        <div class= "service"><h3>Dine In</h3></div>
+        <div class= "service"><h3>Take Out</h3></div>
+        <div class= "service"><h3>Delivery</h3></div>
+
+        <h2> Come out an join us for a well-structured meal!</h2>
+        <img src="./assets/images/table-in-restaurant.jpg" alt="table photo in home page">
     </main>
 </body>
 </html>
